resvg-qt/src/ffi.rs

#[test]
fn bindgen_test_layout_qtc_transform() {
    assert_eq!(
        ::std::mem::size_of::<qtc_transform>(),
        48usize,
        concat!("Size of: ", stringify!(qtc_transform))
    );
    assert_eq!(
        ::std::mem::align_of::<qtc_transform>(),
        8usize,
        concat!("Alignment of ", stringify!(qtc_transform))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<qtc_transform>())).a as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(qtc_transform),
            "::",
            stringify!(a)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<qtc_transform>())).b as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(qtc_transform),
            "::",
            stringify!(b)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<qtc_transform>())).c as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(qtc_transform),
            "::",
            stringify!(c)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<qtc_transform>())).d as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(qtc_transform),
            "::",
            stringify!(d)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<qtc_transform>())).e as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(qtc_transform),
            "::",
            stringify!(e)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<qtc_transform>())).f as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(qtc_transform),
            "::",
            stringify!(f)
        )
    );
}
pub const PathSegmentType_MoveToSegment: PathSegmentType = 0;
pub const PathSegmentType_LineToSegment: PathSegmentType = 1;
pub const PathSegmentType_CurveToSegment: PathSegmentType = 2;
pub type PathSegmentType = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct PathSegment {
    pub kind: PathSegmentType,
    pub x: f64,
    pub y: f64,
}
#[test]
fn bindgen_test_layout_PathSegment() {
    assert_eq!(
        ::std::mem::size_of::<PathSegment>(),
        24usize,
        concat!("Size of: ", stringify!(PathSegment))
    );
    assert_eq!(
        ::std::mem::align_of::<PathSegment>(),
        8usize,
        concat!("Alignment of ", stringify!(PathSegment))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<PathSegment>())).kind as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(PathSegment),
            "::",
            stringify!(kind)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<PathSegment>())).x as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(PathSegment),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<PathSegment>())).y as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(PathSegment),
            "::",
            stringify!(y)
        )
    );
}
pub const PenCapStyle_FlatCap: PenCapStyle = 0;
pub const PenCapStyle_SquareCap: PenCapStyle = 16;
pub const PenCapStyle_RoundCap: PenCapStyle = 32;
pub type PenCapStyle = u32;
pub const PenJoinStyle_BevelJoin: PenJoinStyle = 64;
pub const PenJoinStyle_RoundJoin: PenJoinStyle = 128;
pub const PenJoinStyle_MiterJoin: PenJoinStyle = 256;
pub type PenJoinStyle = u32;
pub const FillRule_OddEvenFill: FillRule = 0;
pub const FillRule_WindingFill: FillRule = 1;
pub type FillRule = u32;
pub const Spread_PadSpread: Spread = 0;
pub const Spread_ReflectSpread: Spread = 1;
pub const Spread_RepeatSpread: Spread = 2;
pub type Spread = u32;
pub const FontStyle_StyleNormal: FontStyle = 0;
pub const FontStyle_StyleItalic: FontStyle = 1;
pub const FontStyle_StyleOblique: FontStyle = 2;
pub type FontStyle = u32;
pub const FontWeight_Thin: FontWeight = 0;
pub const FontWeight_ExtraLight: FontWeight = 12;
pub const FontWeight_Light: FontWeight = 25;
pub const FontWeight_Normal: FontWeight = 50;
pub const FontWeight_Medium: FontWeight = 57;
pub const FontWeight_DemiBold: FontWeight = 63;
pub const FontWeight_Bold: FontWeight = 75;
pub const FontWeight_ExtraBold: FontWeight = 81;
pub const FontWeight_Black: FontWeight = 87;
pub type FontWeight = u32;
pub const FontStretch_UltraCondensed: FontStretch = 50;
pub const FontStretch_ExtraCondensed: FontStretch = 62;
pub const FontStretch_Condensed: FontStretch = 75;
pub const FontStretch_SemiCondensed: FontStretch = 87;
pub const FontStretch_Unstretched: FontStretch = 100;
pub const FontStretch_SemiExpanded: FontStretch = 112;
pub const FontStretch_Expanded: FontStretch = 125;
pub const FontStretch_ExtraExpanded: FontStretch = 150;
pub const FontStretch_UltraExpanded: FontStretch = 200;
pub type FontStretch = u32;
pub const CompositionMode_CompositionMode_SourceOver: CompositionMode = 0;
pub const CompositionMode_CompositionMode_DestinationOver: CompositionMode = 1;
pub const CompositionMode_CompositionMode_Clear: CompositionMode = 2;
pub const CompositionMode_CompositionMode_Source: CompositionMode = 3;
pub const CompositionMode_CompositionMode_Destination: CompositionMode = 4;
pub const CompositionMode_CompositionMode_SourceIn: CompositionMode = 5;
pub const CompositionMode_CompositionMode_DestinationIn: CompositionMode = 6;
pub const CompositionMode_CompositionMode_SourceOut: CompositionMode = 7;
pub const CompositionMode_CompositionMode_DestinationOut: CompositionMode = 8;
pub const CompositionMode_CompositionMode_SourceAtop: CompositionMode = 9;
pub const CompositionMode_CompositionMode_DestinationAtop: CompositionMode = 10;
pub const CompositionMode_CompositionMode_Xor: CompositionMode = 11;
pub const CompositionMode_CompositionMode_Plus: CompositionMode = 12;
pub const CompositionMode_CompositionMode_Multiply: CompositionMode = 13;
pub const CompositionMode_CompositionMode_Screen: CompositionMode = 14;
pub const CompositionMode_CompositionMode_Overlay: CompositionMode = 15;
pub const CompositionMode_CompositionMode_Darken: CompositionMode = 16;
pub const CompositionMode_CompositionMode_Lighten: CompositionMode = 17;
pub const CompositionMode_CompositionMode_ColorDodge: CompositionMode = 18;
pub const CompositionMode_CompositionMode_ColorBurn: CompositionMode = 19;
pub const CompositionMode_CompositionMode_HardLight: CompositionMode = 20;
pub const CompositionMode_CompositionMode_SoftLight: CompositionMode = 21;
pub const CompositionMode_CompositionMode_Difference: CompositionMode = 22;
pub const CompositionMode_CompositionMode_Exclusion: CompositionMode = 23;
pub type CompositionMode = u32;
pub const AspectRatioMode_IgnoreAspectRatio: AspectRatioMode = 0;
pub const AspectRatioMode_KeepAspectRatio: AspectRatioMode = 1;
pub const AspectRatioMode_KeepAspectRatioByExpanding: AspectRatioMode = 2;
pub type AspectRatioMode = u32;
extern "C" {
    pub fn qtc_create_gui(app_name: *mut ::std::os::raw::c_char) -> *mut qtc_qguiapp;
}
extern "C" {
    pub fn qtc_destroy_gui(c_app: *mut qtc_qguiapp);
}
extern "C" {
    pub fn qtc_qimage_create_rgba_premultiplied(width: u32, height: u32) -> *mut qtc_qimage;
}
extern "C" {
    pub fn qtc_qimage_create_rgba(width: u32, height: u32) -> *mut qtc_qimage;
}
extern "C" {
    pub fn qtc_qimage_from_file(path: *const ::std::os::raw::c_char) -> *mut qtc_qimage;
}
extern "C" {
    pub fn qtc_qimage_from_data(data: *const u8, size: ::std::os::raw::c_int) -> *mut qtc_qimage;
}
extern "C" {
    pub fn qtc_qimage_get_data(c_img: *mut qtc_qimage) -> *mut u8;
}
extern "C" {
    pub fn qtc_qimage_get_byte_count(c_img: *mut qtc_qimage) -> u32;
}
extern "C" {
    pub fn qtc_qimage_resize(
        c_img: *mut qtc_qimage,
        width: u32,
        height: u32,
        ratio: AspectRatioMode,
        smoothTransformation: bool,
    ) -> *mut qtc_qimage;
}
extern "C" {
    pub fn qtc_qimage_copy(
        c_img: *mut qtc_qimage,
        x: u32,
        y: u32,
        width: u32,
        height: u32,
    ) -> *mut qtc_qimage;
}
extern "C" {
    pub fn qtc_qimage_fill(c_img: *mut qtc_qimage, r: u8, g: u8, b: u8, a: u8);
}
extern "C" {
    pub fn qtc_qimage_set_dpi(c_img: *mut qtc_qimage, dpi: f64);
}
extern "C" {
    pub fn qtc_qimage_to_rgba(c_img: *mut qtc_qimage) -> *mut qtc_qimage;
}
extern "C" {
    pub fn qtc_qimage_get_width(c_img: *mut qtc_qimage) -> u32;
}
extern "C" {
    pub fn qtc_qimage_get_height(c_img: *mut qtc_qimage) -> u32;
}
extern "C" {
    pub fn qtc_qimage_save(c_img: *mut qtc_qimage, path: *const ::std::os::raw::c_char) -> bool;
}
extern "C" {
    pub fn qtc_qimage_destroy(c_img: *mut qtc_qimage);
}
extern "C" {
    pub fn qtc_qpainter_create(c_img: *mut qtc_qimage) -> *mut qtc_qpainter;
}
extern "C" {
    pub fn qtc_qpainter_set_antialiasing(c_p: *mut qtc_qpainter, flag: bool);
}
extern "C" {
    pub fn qtc_qpainter_set_smooth_pixmap_transform(c_p: *mut qtc_qpainter, flag: bool);
}
extern "C" {
    pub fn qtc_qpainter_get_font(c_p: *mut qtc_qpainter) -> *mut qtc_qfont;
}
extern "C" {
    pub fn qtc_qpainter_set_font(c_p: *mut qtc_qpainter, c_f: *mut qtc_qfont);
}
extern "C" {
    pub fn qtc_qpainter_set_pen(c_p: *mut qtc_qpainter, c_pen: *mut qtc_qpen);
}
extern "C" {
    pub fn qtc_qpainter_reset_pen(c_p: *mut qtc_qpainter);
}
extern "C" {
    pub fn qtc_qpainter_set_brush(c_p: *mut qtc_qpainter, c_brush: *mut qtc_qbrush);
}
extern "C" {
    pub fn qtc_qpainter_reset_brush(c_p: *mut qtc_qpainter);
}
extern "C" {
    pub fn qtc_qpainter_set_opacity(c_p: *mut qtc_qpainter, opacity: f64);
}
extern "C" {
    pub fn qtc_qpainter_draw_path(c_p: *mut qtc_qpainter, c_pp: *mut qtc_qpainterpath);
}
extern "C" {
    pub fn qtc_qpainter_draw_image(c_p: *mut qtc_qpainter, x: f64, y: f64, c_img: *mut qtc_qimage);
}
extern "C" {
    pub fn qtc_qpainter_draw_image_rect(
        c_p: *mut qtc_qpainter,
        x: f64,
        y: f64,
        w: f64,
        h: f64,
        c_img: *mut qtc_qimage,
    );
}
extern "C" {
    pub fn qtc_qpainter_draw_text(
        c_p: *mut qtc_qpainter,
        x: f64,
        y: f64,
        c_text: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn qtc_qpainter_draw_rect(c_p: *mut qtc_qpainter, x: f64, y: f64, w: f64, h: f64);
}
extern "C" {
    pub fn qtc_qpainter_translate(c_p: *mut qtc_qpainter, tx: f64, ty: f64);
}
extern "C" {
    pub fn qtc_qpainter_scale(c_p: *mut qtc_qpainter, sx: f64, sy: f64);
}
extern "C" {
    pub fn qtc_qpainter_get_transform(c_p: *mut qtc_qpainter) -> *mut qtc_qtransform;
}
extern "C" {
    pub fn qtc_qpainter_set_transform(
        c_p: *mut qtc_qpainter,
        q_ts: *mut qtc_qtransform,
        combine: bool,
    );
}
extern "C" {
    pub fn qtc_qpainter_set_clip_rect(c_p: *mut qtc_qpainter, x: f64, y: f64, w: f64, h: f64);
}
extern "C" {
    pub fn qtc_qpainter_set_clip_path(c_p: *mut qtc_qpainter, c_pp: *mut qtc_qpainterpath);
}
extern "C" {
    pub fn qtc_qpainter_reset_clip_path(c_p: *mut qtc_qpainter);
}
extern "C" {
    pub fn qtc_qpainter_set_composition_mode(c_p: *mut qtc_qpainter, mode: CompositionMode);
}
extern "C" {
    pub fn qtc_qpainter_get_fontmetricsf(c_p: *mut qtc_qpainter) -> *mut qtc_qfontmetricsf;
}
extern "C" {
    pub fn qtc_qpainter_end(c_p: *mut qtc_qpainter);
}
extern "C" {
    pub fn qtc_qpainter_destroy(c_p: *mut qtc_qpainter);
}
extern "C" {
    pub fn qtc_qpainterpath_create() -> *mut qtc_qpainterpath;
}
extern "C" {
    pub fn qtc_qpainterpath_move_to(c_pp: *mut qtc_qpainterpath, x: f64, y: f64);
}
extern "C" {
    pub fn qtc_qpainterpath_line_to(c_pp: *mut qtc_qpainterpath, x: f64, y: f64);
}
